# claude-config

./: .gitignore  CLAUDE.md  settings.json  settings.local.json  stats-cache.json
archives/: CLAUDE-btdpframework-usage.md  CLAUDE-btdpframework.md  CLAUDE-gcpaudit.md  CLAUDE-personalprojects.md  CLAUDE-projects.md  CLAUDE-repo.md  CLAUDE-tables.md  CLAUDE.md  README.md  mcp_servers.json.bak  settings.backup.20251008_112002.json  settings.backup.20251008_143421.json
archives/agents/: btdp-implementation.md  dax-specialist.md  gcp-specialist.md  lineage.md  personalproject-implementation.md  sql-specialist.md
archives/commands/: README.md
archives/skills-legacy/google-slides-translator/scripts/: pyproject.toml  run.sh
archives/skills-legacy/google-slides-translator/scripts/src/: translate_slides.py
archives/skills.old/cv-manager/scripts/: pyproject.toml  run.sh
archives/skills.old/cv-manager/scripts/src/: extract_cv.py
archives/skills.old/gcp-project-auditor/scripts/: pyproject.toml  run.sh
archives/skills.old/gcp-project-auditor/scripts/src/: __init__.py  audit_project.py
commands/: medical-article.md
commands/cv/: candidate.md  interview.md
commands/meetings/: summary.md
commands/record/: list.md  play.md  rename.md  start.md  stop.md
commands/topics/: open.md  update.md
conversations/: 2025-11-30_Amira_Vol_Autorisation_Sortie.md  2025-11-30_modification_script_acte_engagement_pdf.md
plugins/: install-counts-cache.json  known_marketplaces.json
scripts/: bash_log.sh  format.sh  statusline-script.sh
skills/: TODO.md
skills/audio-recorder/: CLAUDE.md  README.md  SKILL.md
skills/btdp-groups-api/: check_member.sh  list_members.sh  remove_members.sh
skills/btdp-it-masterdata-retrieval/: README.md  SKILL.md.backup  rag_create.sh  rag_delete.sh
skills/chrome-devtools/: SKILL.md
skills/create-change-request/: SKILL.md
skills/create-story/: SKILL.md
skills/email-manager/: CLAUDE.md  README.md  SKILL.md
skills/gcp-specialist/: SKILL.md
skills/golang/: SKILL.md
skills/google-docs-manager/: CLAUDE.md  README.md  SKILL.md
skills/o365-manager/scripts.old/: pyproject.toml  run.sh
skills/o365-manager/scripts.old/src/: email_rules.json  o365_manager.py
(+142 files in other folders)
