[project]
name = "gcp-project-auditor"
version = "1.0.0"
description = "GCP Project Security Audit Tool"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.150.0",
    "google-cloud-asset>=3.19.0",
    "google-cloud-resource-manager>=1.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
